# exact_cover

./: .gitignore  CMakeLists.txt  Makefile  data.cpp  data.h  main.cpp  sodoku_test.txt  solver.cpp  solver.h  sudoku.cpp  sudoku.h  utils.cpp  utils.h
